src/snapshots/ruff__linter__tests__D103_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: PublicFunction
  location:
    row: 400
    column: 0
  end_location:
    row: 401
    column: 0
  fix: ~

