src/snapshots/ruff__linter__tests__D105_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: MagicMethod
  location:
    row: 64
    column: 4
  end_location:
    row: 67
    column: 4
  fix: ~

